--- a/Paper/literature.bib
+++ b/Paper/literature.bib
@@ -500,6 +500,28 @@ at the end of the file.
 	organization={Springer}
 }
 
+@inproceedings{RabeT15,
+	author    = {Markus N. Rabe and
+	Leander Tentrup},
+	title     = {{CAQE:} {A} Certifying {QBF} Solver},
+	booktitle = {{FMCAD}},
+	pages     = {136--143},
+	publisher = {{IEEE}},
+	year      = {2015}
+}
+
+@inproceedings{ShuklaBPS19,
+	author    = {Ankit Shukla and
+	Armin Biere and
+	Luca Pulina and
+	Martina Seidl},
+	title     = {A Survey on Applications of Quantified Boolean Formulas},
+	booktitle = {{ICTAI}},
+	pages     = {78--84},
+	publisher = {{IEEE}},
+	year      = {2019}
+}
+
 @inproceedings{Cruz2017b,
 	title={Efficient certified resolution proof checking},
 	author={Cruz-Filipe, Lu{\'\i}s and Marques-Silva, Joao and Schneider-Kamp, Peter},
